--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -18,7 +18,7 @@ main {
 .blue-block-main {
     width: 100%;
     height: 50vh;
-    background: linear-gradient(135deg, rgba(0,0,139,0.9), rgba(0,0,205,0.8));
+    background: linear-gradient(180deg, rgb(0, 0, 201), rgb(0, 110, 255));
     padding: 80px 20px 20px;
     color: white;
     display: flex;
